@@ -1,14 +1,15 @@
 Package: Matrix
-Version: 0.8-13
-Date: 2004-09-05
+Version: 0.8-15
+Date: 2004-10-02
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Classes and methods for numerical linear algebra
     using Lapack, LDL, and Metis.
-Depends: R (>= 1.9.0), methods, graphics, stats
+Depends: R (>= 2.0.0), methods
 Imports: graphics, stats
 Suggests: lattice
+SaveImage: no
 LazyLoad: yes
 LazyData: yes
 License: GPL version 2 or later.
